# chrome-mcp

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: accessibility.rs  browser.rs  cdp.rs  error.rs  lib.rs  main.rs  mcp.rs  native_input.rs  screenshot.rs
tests/: integration_tests.rs
